--- a/editor/editorconfig.org
+++ b/editor/editorconfig.org
@@ -4,6 +4,8 @@
 #+PROPERTY: header-args+ :mkdirp yes
 #+PROPERTY: header-args+ :tangle "~/.editorconfig"
 #+OPTIONS: prop:t
+/EditorConfig helps maintain consistent coding styles for multiple developers
+working on the same project across various editors and IDEs./
 
 =root=: special property that should be specified at the top of the file outside
 of any sections. Set to =true= to stop .editorconfig files search on current
@@ -11,74 +13,69 @@ file.
 #+BEGIN_SRC config
 root = true
 #+END_SRC
-
 * Default
-#+BEGIN_SRC config
-[*]
-#+END_SRC
+  #+BEGIN_SRC config
+  [*]
+  #+END_SRC
 
-=end_of_line=: set to =lf=, =cr=, or =crlf= to control how line breaks are
-represented.
-#+BEGIN_SRC config
-end_of_line = lf
-#+END_SRC
+  =end_of_line=: set to =lf=, =cr=, or =crlf= to control how line breaks are
+  represented.
+  #+BEGIN_SRC config
+  end_of_line = lf
+  #+END_SRC
 
-=insert_final_newline=: set to =true= to ensure file ends with a newline when
-saving and =false= to ensure it doesn't.
-#+BEGIN_SRC config
-insert_final_newline = true
-#+END_SRC
+  =insert_final_newline=: set to =true= to ensure file ends with a newline when
+  saving and =false= to ensure it doesn't.
+  #+BEGIN_SRC config
+  insert_final_newline = true
+  #+END_SRC
 
-=charset=: set to =latin1=, =utf-8=, =utf-8-bom=, =utf-16be= or =utf-16le= to
-control the character set.
-#+BEGIN_SRC config
-charset = utf-8
-#+END_SRC
+  =charset=: set to =latin1=, =utf-8=, =utf-8-bom=, =utf-16be= or =utf-16le= to
+  control the character set.
+  #+BEGIN_SRC config
+  charset = utf-8
+  #+END_SRC
 
-=trim_trailing_whitespace=: set to =true= to remove any whitespace characters
-preceding newline characters and =false= to ensure it doesn't.
-#+BEGIN_SRC config
-trim_trailing_whitespace = true
-#+END_SRC
+  =trim_trailing_whitespace=: set to =true= to remove any whitespace characters
+  preceding newline characters and =false= to ensure it doesn't.
+  #+BEGIN_SRC config
+  trim_trailing_whitespace = true
+  #+END_SRC
 
-=indent_style=: set to =tab= or =space= to use hard tabs or soft tabs
-respectively.
-#+BEGIN_SRC config
-indent_style = space
-#+END_SRC
+  =indent_style=: set to =tab= or =space= to use hard tabs or soft tabs
+  respectively.
+  #+BEGIN_SRC config
+  indent_style = space
+  #+END_SRC
 
-=indent_size=: a whole number defining the number of columns used for each
-indentation level and the width of soft tabs (when supported). When set to
-=tab=, the value of =tab_width= (if specified) will be used.
-#+BEGIN_SRC config
-indent_size = 4
-#+END_SRC
+  =indent_size=: a whole number defining the number of columns used for each
+  indentation level and the width of soft tabs (when supported). When set to
+  =tab=, the value of =tab_width= (if specified) will be used.
+  #+BEGIN_SRC config
+  indent_size = 4
+  #+END_SRC
 
-=max_line_length=: forces hard line wrapping after the amount of characters
-specified.
-#+BEGIN_SRC config
-max_line_length = 80
-#+END_SRC
-
+  =max_line_length=: forces hard line wrapping after the amount of characters
+  specified.
+  #+BEGIN_SRC config
+  max_line_length = 80
+  #+END_SRC
 * 2 spaces
-Set =indent_size= to =2= for =js=, =css=, =html= etc.:
-#+BEGIN_SRC config
-[*.{js,css,html,json,tex,yaml,feature}]
-indent_style = space
-indent_size = 2
-#+END_SRC
-
+  Set =indent_size= to =2= for =js=, =css=, =html= etc.:
+  #+BEGIN_SRC config
+  [*.{js,css,html,json,tex,yaml,feature}]
+  indent_style = space
+  indent_size = 2
+  #+END_SRC
 * 120 line width
-Set =max_line_length= to =120= for =java= and =kt=:
-#+BEGIN_SRC config
-[*.{java,kt}]
-max_line_length = 120
-#+END_SRC
-
+  Set =max_line_length= to =120= for =java= and =kt=:
+  #+BEGIN_SRC config
+  [*.{java,kt}]
+  max_line_length = 120
+  #+END_SRC
 * Tabs
-Use tabs for makefiles.
-#+BEGIN_SRC config
-[{Makefile,**.mk}]
-indent_style = tab
-#+END_SRC
-
+  Use tabs for makefiles.
+  #+BEGIN_SRC config
+  [{Makefile,**.mk}]
+  indent_style = tab
+  #+END_SRC
