--- a/term/alacritty.org
+++ b/term/alacritty.org
@@ -1,51 +1,49 @@
-#+TITLE: Alacritty config
+#+TITLE: Alacritty
 #+AUTHOR: Kuhy
 #+PROPERTY: header-args+ :comments no
 #+PROPERTY: header-args+ :mkdirp yes
 #+PROPERTY: header-args+ :tangle "~/.config/alacritty/alacritty.yml"
 #+PROPERTY: header-args+ :noweb tangle
 #+OPTIONS: prop:t
-
+/A cross-platform, GPU-accelerated terminal emulator/
 #+INCLUDE: "../variables.org"
-
 * Colors
-#+BEGIN_SRC yml
-colors:
-  primary:
-    background: '<<base00>>'
-    foreground: '<<base05>>'
+  #+BEGIN_SRC yml
+  colors:
+    primary:
+      background: '<<base00>>'
+      foreground: '<<base05>>'
 
-  cursor:
-    text:   '<<base00>>'
-    cursor: '<<base05>>'
+    cursor:
+      text:   '<<base00>>'
+      cursor: '<<base05>>'
 
-  normal:
-    black:   '<<base00>>'
-    red:     '<<base08>>'
-    green:   '<<base0B>>'
-    yellow:  '<<base0A>>'
-    blue:    '<<base0D>>'
-    magenta: '<<base0E>>'
-    cyan:    '<<base0C>>'
-    white:   '<<base05>>'
+    normal:
+      black:   '<<base00>>'
+      red:     '<<base08>>'
+      green:   '<<base0B>>'
+      yellow:  '<<base0A>>'
+      blue:    '<<base0D>>'
+      magenta: '<<base0E>>'
+      cyan:    '<<base0C>>'
+      white:   '<<base05>>'
 
-  bright:
-    black:   '<<base03>>'
-    red:     '<<base09>>'
-    green:   '<<base01>>'
-    yellow:  '<<base02>>'
-    blue:    '<<base04>>'
-    magenta: '<<base06>>'
-    cyan:    '<<base0F>>'
-    white:   '<<base07>>'
+    bright:
+      black:   '<<base03>>'
+      red:     '<<base09>>'
+      green:   '<<base01>>'
+      yellow:  '<<base02>>'
+      blue:    '<<base04>>'
+      magenta: '<<base06>>'
+      cyan:    '<<base0F>>'
+      white:   '<<base07>>'
 
-draw_bold_text_with_bright_colors: false
-#+END_SRC
-
+  draw_bold_text_with_bright_colors: false
+  #+END_SRC
 * Font
-#+BEGIN_SRC yml
-font:
-  normal:
-    family: <<font>>
-  size: 10.0
-#+END_SRC
+  #+BEGIN_SRC yml
+  font:
+    normal:
+      family: <<font>>
+    size: 10.0
+  #+END_SRC
