--- a/term/fish.org
+++ b/term/fish.org
@@ -1,181 +1,172 @@
-#+TITLE: Fish config
+#+TITLE: Fish
 #+AUTHOR: Kuhy
 #+OPTIONS: prop:t
-
+/Smart and user friendly shell intended mostly for interactive use/
 #+INCLUDE: "../variables.org"
-
 * General
-:PROPERTIES:
-:header-args: :tangle ~/.config/fish/config.fish :comments both :mkdirp yes :noweb tangle
-:END:
+  :PROPERTIES:
+  :header-args: :tangle ~/.config/fish/config.fish :comments both :mkdirp yes :noweb tangle
+  :END:
 ** Behaviour
-Use vim and emacs key bindings at the same time.
-#+BEGIN_SRC sh
-fish_hybrid_key_bindings
-#+END_SRC
+   Use vim and emacs key bindings at the same time.
+   #+BEGIN_SRC sh
+   fish_hybrid_key_bindings
+   #+END_SRC
 
-Bootstrap fisher installation
-#+BEGIN_SRC sh
-if not functions -q fisher
-    set -q XDG_CONFIG_HOME; or set XDG_CONFIG_HOME ~/.config
-    curl https://git.io/fisher --create-dirs -sLo $XDG_CONFIG_HOME/fish/functions/fisher.fish
-    fish -c fisher
-end
-#+END_SRC
+   Bootstrap fisher installation
+   #+BEGIN_SRC sh
+   if not functions -q fisher
+       set -q XDG_CONFIG_HOME; or set XDG_CONFIG_HOME ~/.config
+       curl https://git.io/fisher --create-dirs -sLo $XDG_CONFIG_HOME/fish/functions/fisher.fish
+       fish -c fisher
+   end
+   #+END_SRC
 
-add following folders to the path
-#+BEGIN_SRC sh
-set PATH ~/bin $PATH
-set PATH ~/.local/bin $PATH
-set PATH ~/.cargo/bin $PATH
-#+END_SRC
+   add following folders to the path
+   #+BEGIN_SRC sh
+   set PATH ~/bin $PATH
+   set PATH ~/.local/bin $PATH
+   set PATH ~/.cargo/bin $PATH
+   #+END_SRC
 
-make abbrevations private to a particular fish session
-#+BEGIN_SRC sh
-set -g fish_user_abbreviations
-#+END_SRC
+   make abbrevations private to a particular fish session
+   #+BEGIN_SRC sh
+   set -g fish_user_abbreviations
+   #+END_SRC
 
-set aliases
-#+BEGIN_SRC sh
-alias ssh 'env TERM=xterm ssh'
-alias cat 'bat'
-alias ls 'exa'
-alias top 'ytop'
-alias rm 'echo "Use \'del\', or the full path i.e. \'/bin/rm\'"'
-alias rmdir 'echo "Use \'deldir\', or the full path i.e. \'/bin/rmdir\'"'
-alias del 'rmtrash'
-alias deldir 'rmdirtrash'
-alias mv 'mv -vn'
-thefuck --alias | source
-#+END_SRC
+   set aliases
+   #+BEGIN_SRC sh
+   alias ssh 'env TERM=xterm ssh'
+   alias cat 'bat'
+   alias ls 'exa'
+   alias top 'ytop'
+   alias rm 'echo "Use \'del\', or the full path i.e. \'/bin/rm\'"'
+   alias rmdir 'echo "Use \'deldir\', or the full path i.e. \'/bin/rmdir\'"'
+   alias del 'rmtrash'
+   alias deldir 'rmdirtrash'
+   alias mv 'mv -vn'
+   thefuck --alias | source
+   #+END_SRC
 
-set abbrevations
-#+BEGIN_SRC sh
-abbr c 'clear'
+   set abbrevations
+   #+BEGIN_SRC sh
+   abbr c 'clear'
 
-abbr .1 'cd ..'
-abbr .2 'cd ../..'
-abbr .3 'cd ../../..'
-abbr .4 'cd ../../../..'
-abbr .5 'cd ../../../../..'
+   abbr .1 'cd ..'
+   abbr .2 'cd ../..'
+   abbr .3 'cd ../../..'
+   abbr .4 'cd ../../../..'
+   abbr .5 'cd ../../../../..'
 
-abbr v 'vim'
+   abbr v 'vim'
 
-abbr :q 'exit'
+   abbr :q 'exit'
 
-abbr g 'git'
-abbr gs 'git status'
-abbr gl 'git log'
-abbr ga 'git add'
-abbr gc 'git commit'
-abbr gd 'git difftool --dir-diff'
+   abbr g 'git'
+   abbr gs 'git status'
+   abbr gl 'git log'
+   abbr ga 'git add'
+   abbr gc 'git commit'
+   abbr gd 'git difftool --dir-diff'
 
-abbr dnf 'sudo dnf'
-abbr pacman 'sudo pacman'
-abbr mount 'sudo mount'
-abbr umount 'sudo umount'
-#+END_SRC
+   abbr dnf 'sudo dnf'
+   abbr pacman 'sudo pacman'
+   abbr mount 'sudo mount'
+   abbr umount 'sudo umount'
+   #+END_SRC
 
-Suppress fish greeting
-#+BEGIN_SRC sh
-set fish_greeting ''
-#+END_SRC
+   Suppress fish greeting
+   #+BEGIN_SRC sh
+   set fish_greeting ''
+   #+END_SRC
 
-Use =starship= as a prompt
-#+BEGIN_SRC sh
-starship init fish | source
-#+END_SRC
+   Use =starship= as a prompt
+   #+BEGIN_SRC sh
+   starship init fish | source
+   #+END_SRC
 
-Use =zoxide=
-#+BEGIN_SRC sh
-zoxide init fish | source
-#+END_SRC
-
+   Use =zoxide=
+   #+BEGIN_SRC sh
+   zoxide init fish | source
+   #+END_SRC
 ** Colors
-#+BEGIN_SRC sh
-set -g fish_color_autosuggestion brblack
-set -g fish_color_cancel -r
-set -g fish_color_command --bold white
-set -g fish_color_comment brblack
-set -g fish_color_cwd green
-set -g fish_color_cwd_root red
-set -g fish_color_end brblack
-set -g fish_color_error red
-set -g fish_color_escape yellow
-set -g fish_color_history_current --bold
-set -g fish_color_host white
-set -g fish_color_match --background=brblack
-set -g fish_color_normal white
-set -g fish_color_operator blue
-set -g fish_color_param white
-set -g fish_color_quote green
-set -g fish_color_redirection cyan
-set -g fish_color_search_match yellow --background=brblack
-set -g fish_color_selection white --bold --background=brblack
-set -g fish_color_status red
-set -g fish_color_user green
-set -g fish_color_valid_path --underline
-set -g fish_pager_color_completion normal
-set -g fish_pager_color_description yellow --dim
-set -g fish_pager_color_prefix white --bold
-set -g fish_pager_color_progress black --bold --background=blue
-#+END_SRC
-
+   #+BEGIN_SRC sh
+   set -g fish_color_autosuggestion brblack
+   set -g fish_color_cancel -r
+   set -g fish_color_command --bold white
+   set -g fish_color_comment brblack
+   set -g fish_color_cwd green
+   set -g fish_color_cwd_root red
+   set -g fish_color_end brblack
+   set -g fish_color_error red
+   set -g fish_color_escape yellow
+   set -g fish_color_history_current --bold
+   set -g fish_color_host white
+   set -g fish_color_match --background=brblack
+   set -g fish_color_normal white
+   set -g fish_color_operator blue
+   set -g fish_color_param white
+   set -g fish_color_quote green
+   set -g fish_color_redirection cyan
+   set -g fish_color_search_match yellow --background=brblack
+   set -g fish_color_selection white --bold --background=brblack
+   set -g fish_color_status red
+   set -g fish_color_user green
+   set -g fish_color_valid_path --underline
+   set -g fish_pager_color_completion normal
+   set -g fish_pager_color_description yellow --dim
+   set -g fish_pager_color_prefix white --bold
+   set -g fish_pager_color_progress black --bold --background=blue
+   #+END_SRC
 * Functions
 ** Editor
-:PROPERTIES:
-:header-args: :tangle ~/.config/fish/functions/e.fish :comments both :mkdirp yes :noweb tangle
-:END:
-Start and detach =$EDITOR= from shell.
-#+BEGIN_SRC sh
-function e
-    bash -c "eval $VISUAL $argv" >/dev/null &; disown
-end
-#+END_SRC
-
+   :PROPERTIES:
+   :header-args: :tangle ~/.config/fish/functions/e.fish :comments both :mkdirp yes :noweb tangle
+   :END:
+   Start and detach =$EDITOR= from shell.
+   #+BEGIN_SRC sh
+   function e
+       bash -c "eval $VISUAL $argv" >/dev/null &; disown
+   end
+   #+END_SRC
 ** Resource opener
-:PROPERTIES:
-:header-args: :tangle ~/.config/fish/functions/o.fish :comments both :mkdirp yes :noweb tangle
-:END:
-Start and detach =$EDITOR= from shell.
-#+BEGIN_SRC sh
-function o
-    <<opener>> $argv
-end
-#+END_SRC
-
+   :PROPERTIES:
+   :header-args: :tangle ~/.config/fish/functions/o.fish :comments both :mkdirp yes :noweb tangle
+   :END:
+   Start and detach =$EDITOR= from shell.
+   #+BEGIN_SRC sh
+   function o
+       <<opener>> $argv
+   end
+   #+END_SRC
 ** Cheat.sh
-:PROPERTIES:
-:header-args: :tangle ~/.config/fish/functions/cht.fish :comments both :mkdirp yes :noweb tangle
-:END:
-#+BEGIN_SRC sh
-function cht
-  set param (echo $argv | \
-        sed -E 's/ /\//;s/ ([0-9]+)$/\/\1/;s/ /+/g')
-  curl -Ls "cht.sh/$param" | less -R
-end
-#+END_SRC
-
+   :PROPERTIES:
+   :header-args: :tangle ~/.config/fish/functions/cht.fish :comments both :mkdirp yes :noweb tangle
+   :END:
+   #+BEGIN_SRC sh
+   function cht
+     set param (echo $argv | \
+           sed -E 's/ /\//;s/ ([0-9]+)$/\/\1/;s/ /+/g')
+     curl -Ls "cht.sh/$param" | less -R
+   end
+   #+END_SRC
 * Fisher
-:PROPERTIES:
-:header-args: :tangle ~/.config/fish/fishfile :comments no :mkdirp yes :noweb tangle
-:END:
-Fisher is fish package manager.
-
+  :PROPERTIES:
+  :header-args: :tangle ~/.config/fish/fishfile :comments no :mkdirp yes :noweb tangle
+  :END:
+  Fisher is fish package manager.
 ** Pure
-Minimal prompt for fish.
-#+BEGIN_SRC conf
-#rafaelrinaldi/pure
-#+END_SRC
-
+   Minimal prompt for fish.
+   #+BEGIN_SRC conf
+   #rafaelrinaldi/pure
+   #+END_SRC
 ** Done
-Automatically receive notifications when long processes finish.
-#+BEGIN_SRC conf
-franciscolourenco/done
-#+END_SRC
-
+   Automatically receive notifications when long processes finish.
+   #+BEGIN_SRC conf
+   franciscolourenco/done
+   #+END_SRC
 ** Pisces
-helps you to work with paired symbols in the command line
-#+BEGIN_SRC conf
-#laughedelic/pisces
-#+END_SRC
+   helps you to work with paired symbols in the command line
+   #+BEGIN_SRC conf
+   #laughedelic/pisces
+   #+END_SRC
