--- a/variables.org
+++ b/variables.org
@@ -1,167 +1,161 @@
 #+TITLE: Variables
 #+OPTIONS: prop:t
-
-Here are defined global variables for all configuration files.
-
+/Here are defined global variables for all configuration files./
 * Default applications
-:PROPERTIES:
-:header-args: :tangle no
-:END:
+  :PROPERTIES:
+  :header-args: :tangle no
+  :END:
+  Your preferred resource opener
+  #+NAME: opener
+  #+BEGIN_SRC conf
+  xdg-open
+  #+END_SRC
 
-Your preferred resource opener
-#+NAME: opener
-#+BEGIN_SRC conf
-xdg-open
-#+END_SRC
+  Your preferred application launcher
+  #+NAME: launcher
+  #+BEGIN_SRC conf
+  gtk-launch
+  #+END_SRC
 
-Your preferred application launcher
-#+NAME: launcher
-#+BEGIN_SRC conf
-gtk-launch
-#+END_SRC
-
-Your preferred clip tool
-#+NAME: clip_tool
-#+BEGIN_SRC conf
-wl-copy
-#+END_SRC
+  Your preferred clip tool
+  #+NAME: clip_tool
+  #+BEGIN_SRC conf
+  wl-copy
+  #+END_SRC
 
 
-Your preferred terminal emulator
-#+NAME: terminal
-#+BEGIN_SRC conf
-alacritty
-#+END_SRC
+  Your preferred terminal emulator
+  #+NAME: terminal
+  #+BEGIN_SRC conf
+  alacritty
+  #+END_SRC
 
-Your preferred web browser
-#+NAME: web_browser
-#+BEGIN_SRC conf
-firefox
-#+END_SRC
+  Your preferred web browser
+  #+NAME: web_browser
+  #+BEGIN_SRC conf
+  firefox
+  #+END_SRC
 
-Your preferred file browser
-#+NAME: file_browser
-#+BEGIN_SRC conf
-ranger
-#+END_SRC
+  Your preferred file browser
+  #+NAME: file_browser
+  #+BEGIN_SRC conf
+  ranger
+  #+END_SRC
 
-Your preferred music player
-#+NAME: music_player
-#+BEGIN_SRC conf
-ncmpcpp
-#+END_SRC
+  Your preferred music player
+  #+NAME: music_player
+  #+BEGIN_SRC conf
+  ncmpcpp
+  #+END_SRC
 
-Your preferred video player
-#+NAME: video_player
-#+BEGIN_SRC conf
-vlc
-#+END_SRC
-
+  Your preferred video player
+  #+NAME: video_player
+  #+BEGIN_SRC conf
+  vlc
+  #+END_SRC
 * Appearance
-:PROPERTIES:
-:header-args: :tangle no
-:END:
-
+  :PROPERTIES:
+  :header-args: :tangle no
+  :END:
 ** Colors
-----
-#+NAME: base00
-#+BEGIN_SRC css
-#282828
-#+END_SRC
+   ----
+   #+NAME: base00
+   #+BEGIN_SRC css
+   #282828
+   #+END_SRC
 
----
-#+NAME: base01
-#+BEGIN_SRC css
-#3c3836
-#+END_SRC
+   ---
+   #+NAME: base01
+   #+BEGIN_SRC css
+   #3c3836
+   #+END_SRC
 
---
-#+NAME: base02
-#+BEGIN_SRC css
-#504945
-#+END_SRC
+   --
+   #+NAME: base02
+   #+BEGIN_SRC css
+   #504945
+   #+END_SRC
 
--
-#+NAME: base03
-#+BEGIN_SRC css
-#665c54
-#+END_SRC
+   -
+   #+NAME: base03
+   #+BEGIN_SRC css
+   #665c54
+   #+END_SRC
 
-+
-#+NAME: base04
-#+BEGIN_SRC css
-#bdae93
-#+END_SRC
+   +
+   #+NAME: base04
+   #+BEGIN_SRC css
+   #bdae93
+   #+END_SRC
 
-++
-#+NAME: base05
-#+BEGIN_SRC css
-#d5c4a1
-#+END_SRC
+   ++
+   #+NAME: base05
+   #+BEGIN_SRC css
+   #d5c4a1
+   #+END_SRC
 
-+++
-#+NAME: base06
-#+BEGIN_SRC css
-#ebdbb2
-#+END_SRC
+   +++
+   #+NAME: base06
+   #+BEGIN_SRC css
+   #ebdbb2
+   #+END_SRC
 
-++++
-#+NAME: base07
-#+BEGIN_SRC css
-#fbf1c7
-#+END_SRC
+   ++++
+   #+NAME: base07
+   #+BEGIN_SRC css
+   #fbf1c7
+   #+END_SRC
 
-red
-#+NAME: base08
-#+BEGIN_SRC css
-#fb4934
-#+END_SRC
+   red
+   #+NAME: base08
+   #+BEGIN_SRC css
+   #fb4934
+   #+END_SRC
 
-orange
-#+NAME: base09
-#+BEGIN_SRC css
-#fe8019
-#+END_SRC
+   orange
+   #+NAME: base09
+   #+BEGIN_SRC css
+   #fe8019
+   #+END_SRC
 
-yellow
-#+NAME: base0A
-#+BEGIN_SRC css
-#fabd2f
-#+END_SRC
+   yellow
+   #+NAME: base0A
+   #+BEGIN_SRC css
+   #fabd2f
+   #+END_SRC
 
-green
-#+NAME: base0B
-#+BEGIN_SRC css
-#b8bb26
-#+END_SRC
+   green
+   #+NAME: base0B
+   #+BEGIN_SRC css
+   #b8bb26
+   #+END_SRC
 
-aqua/cyan
-#+NAME: base0C
-#+BEGIN_SRC css
-#8ec07c
-#+END_SRC
+   aqua/cyan
+   #+NAME: base0C
+   #+BEGIN_SRC css
+   #8ec07c
+   #+END_SRC
 
-blue
-#+NAME: base0D
-#+BEGIN_SRC css
-#83a598
-#+END_SRC
+   blue
+   #+NAME: base0D
+   #+BEGIN_SRC css
+   #83a598
+   #+END_SRC
 
-purple
-#+NAME: base0E
-#+BEGIN_SRC css
-#d3869b
-#+END_SRC
+   purple
+   #+NAME: base0E
+   #+BEGIN_SRC css
+   #d3869b
+   #+END_SRC
 
-brown
-#+NAME: base0F
-#+BEGIN_SRC css
-#d65d0e
-#+END_SRC
-
+   brown
+   #+NAME: base0F
+   #+BEGIN_SRC css
+   #d65d0e
+   #+END_SRC
 ** Font
-Font
-#+NAME: font
-#+BEGIN_SRC conf
-Monoid Nerd Font
-#+END_SRC
+   Font
+   #+NAME: font
+   #+BEGIN_SRC conf
+   Monoid Nerd Font
+   #+END_SRC
